tests/functional/data/transpiler/common/errors/atomic/is_not_assignable.err
is_not_assignable.cpp:4:13: error: expression is not assignable
    4 |             @atomic 12 *= 12;
      |             ^
